--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,7 @@ runs:
       run: |
         #!/bin/bash
         repo=$(basename ${{ inputs.repo }} /)
+        docker image rm -f $repo || true
         $(docker build . -t $repo && docker run --name $repo $repo) &
 inputs:
   repo:
